@@ -4690,3 +4690,4 @@ EVP_KEYMGMT_up_ref                      4795	3_0_0	EXIST::FUNCTION:
 EVP_KEYMGMT_free                        4796	3_0_0	EXIST::FUNCTION:
 EVP_KEYMGMT_provider                    4797	3_0_0	EXIST::FUNCTION:
 X509_PUBKEY_dup                         4798	3_0_0	EXIST::FUNCTION:
+ERR_put_func_error                      4799	3_0_0	EXIST::FUNCTION:
